fixing button color and visibility

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
  * IE Shenanigans.
  */
 body{ 
-	font-size:10px; 
+	font-size:15px; 
 }
 
 .center-block {
@@ -68,18 +68,21 @@ body{
 }
 
 .round-button {
+	background-color:#B2A94F;
 	position:relative;
 	float:right;
-    width: 40px;
-    height: 40px;
-    line-height: 26px;
-    border: 4px solid #ffffff;
-    border-radius: 50%;
-    color: #46310A;
-    text-align: center;
-    text-decoration: none;
-    background: #ffffff;
-    box-shadow: 0px 0px 4px #46310A;
+	width: 40px;
+	height: 40px;
+	line-height: 30px;
+	font-size:20px;
+	font-weight:900;
+	border: 4px solid #B2A94F;
+	border-radius: 50%;
+	color: #46310A;
+	text-align: center;
+	text-decoration: none;
+	background: #B2A94F;
+	box-shadow: 0px 0px 4px #46310A;
 }
 
 .round-button:hover {
